--- a/link-preview.html
+++ b/link-preview.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <title>Link preview</title>
     <style>
-      #link1:hover ~ #frame1 {display:block;}
-      #link2:hover ~ #frame2 {display:block;}
-      #link3:hover ~ #frame3 {display:block;}
-      iframe {
+      a {display:inline-block;}
+      a:hover > iframe {display:block;position:fixed;}
+      a iframe {
         /*border: 0px;*/
         display:none;
         width: 400px;
@@ -22,11 +22,14 @@
   </head>
   <body>
     <!-- For @Sage#8327 <@98159713845248000> on Discord -->
-    <a href="https://pomf.cat/" id="link1">pomf</a>
-    <a href="https://css-tricks.com/" id="link2">css-tricks</a>
-    <a href="https://boards.4chan.org/wg/" id="link3">/wg/</a>
-    <iframe scrolling="no" src="https://pomf.cat/" id="frame1"></iframe>
-    <iframe scrolling="no" src="https://css-tricks.com/" id="frame2"></iframe>
-    <iframe scrolling="no" src="https://boards.4chan.org/wg/" id="frame3"></iframe>
+    <a href="https://pomf.cat/">pomf
+      <iframe scrolling="no" src="https://pomf.cat/"></iframe>
+    </a>
+    <a href="https://css-tricks.com/">css-tricks
+      <iframe scrolling="no" src="https://css-tricks.com/"></iframe>
+    </a>
+    <a href="https://boards.4chan.org/wg/">/wg/
+      <iframe scrolling="no" src="https://boards.4chan.org/wg/"></iframe>
+    </a>
   </body>
 </html>
